# RustServSoft

./: .dockerignore  .env  .gitignore  Cargo.toml  Makefile  README.md  docs.yaml  init_db.sh  sqlx-data.json
migrations/: 20240229124329_init.down.sql  20240229124329_init.up.sql
src/: configuration.rs  lib.rs  main.rs  startup.rs
src/api/: task.rs
src/extractors/: authtoken.rs  mod.rs
src/jwtauth/: jwtauth.rs  mod.rs
src/routes/: book.rs  bookdisplay.rs  comments.rs  health_check.rs  mainpage.rs  mod.rs  subscriptions.rs  user.rs
src/tests/: health_check.rs
tests/: health_check.rs  new_book_test.rs  new_user_test.rs  postgretest.rs
