[package]
name = "letsgetrusty"
version = "0.1.0"
edition = "2021"
 
[[bin]]
path = "src/main.rs"
name = "letsgetrusty"

 
[dependencies]
jsonwebtoken = "*"
config = "0.11"
base64 = "0.13"
actix-web = "^4" 
actix-cors = "0.6.1"
uuid = { version = "0.8.1", features = ["v4", "serde"] }
chrono = {version = "0.4.15", features = ["serde"]}
serde = { version = "^1", features = ["derive"]} 
env_logger = "0.8"
log = "^0.4"
strum_macros = "^0.24"
strum = { version = "^0.24", features = ["derive"]} 
tokio = { version = "1.0", features = ["full"]}
dotenv = "0.15.0"
serde_json = "1.0.114"
sha256 = "1.5.0"
actix-files = "0.6.5"
image-base64 = "0.1.0"
reqwest = { version = "0.11", features = ["multipart"] }
flac = "0.2.0"
rodio = "0.14"

[dependencies.sqlx]
version = "^0.5.0"
default-features = false
features = [
"runtime-actix-rustls",
"macros",
"postgres",
"uuid",
"chrono",
"migrate",
"offline"
] 
